payment and stock updated

--- a/POS and Inventory/frmPOS.resx
+++ b/POS and Inventory/frmPOS.resx
@@ -250,6 +250,9 @@
   <metadata name="Column2.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="Column3.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <metadata name="pdesc.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
@@ -271,7 +274,7 @@
   <data name="Delete.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DgAACw4BQL7hQQAAAR1JREFUSEvlkq2OAkEQhEeAOonY6REkSCTBkpxE3gNczuJ4AIJBIAhPgMfwFgRz
+        DQAACw0B7QfALAAAAR1JREFUSEvlkq2OAkEQhEeAOonY6REkSCTBkpxE3gNczuJ4AIJBIAhPgMfwFgRz
         CoFgf86dwGFxhECTVMgw7ExPkPAlLaja6mJ3Rr0HOdEoN+bszAR2PCVLnhqse6Ts4WcG616VjGhW9tox
         c81ijR9+cOgGY4cLBljjJ9X6xw3Cul0C/Hy8FETfsPxkWn+6QVhiQUHUgeWnSJKGG4QlFmyJ6rD8rNvt
         ambMyQ7CkgqOS6UqsMLwYe3sMGSp4B+yDB/Wrx2GLBWsIMtwwcIOQw4W8GedQ5bhTzS1w5DDBURjyDL8
